task1/test_results_no_defects/infer_test/zero_division_wo/report.txt
#0
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:22: error: Dead Store
  The value written to &ret (type int) is never used.
  20. 	int dividend = 1000;
  21. 	int ret;
  22. 	ret = dividend / 1; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
       ^
  23. }
  24. 

#1
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:34: error: Dead Store
  The value written to &ret (type int) is never used.
  32. 	int ret;
  33. 	dividend /= 1; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
  34. 	ret = dividend;
       ^
  35. }
  36. 

#2
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:45: error: Dead Store
  The value written to &ret (type int) is never used.
  43. 	int dividend = 1000;
  44. 	int ret;
  45. 	ret = dividend % 1; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
       ^
  46. }
  47. 

#3
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:75: error: Dead Store
  The value written to &ret (type int) is never used.
  73. 	int divisors[5] = {2, 1, 3, 0, 4};
  74. 	int ret;
  75. 	ret = dividend / divisors[2]; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
       ^
  76. }
  77. 

#4
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:90: error: Dead Store
  The value written to &ret (type int) is never used.
  88. 	int ret;
  89. 	p = &zero_division_006_gbl_divisor;
  90. 	ret = dividend / *p; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
       ^
  91. }
  92. 

#5
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:115: error: Dead Store
  The value written to &ret (type int) is never used.
  113. 	int ret;
  114. 	zero_division_007_func_001();
  115. 	ret = dividend / zero_division_007_s_gbl.divisor; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
        ^
  116. }
  117. 

#6
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:126: error: Dead Store
  The value written to &ret (type float) is never used.
  124. 	float dividend = 1000.0;
  125. 	float ret;
  126. 	ret = dividend / 1.0; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
        ^
  127. }
  128. 

#7
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:138: error: Dead Store
  The value written to &ret (type int) is never used.
  136. 	int divisor = 1;
  137. 	int ret;
  138. 	ret = dividend / divisor; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
        ^
  139. }
  140. 

#8
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:153: error: Dead Store
  The value written to &ret (type int) is never used.
  151. 	if (divisor != 0)
  152. 	{
  153. 		ret = dividend / divisor; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
         ^
  154. 	}
  155. }

#9
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:166: error: Dead Store
  The value written to &ret (type int) is never used.
  164. 	int divisor = 2;
  165. 	int ret;
  166. 	ret = dividend / (2 * divisor - 3); /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
        ^
  167. }
  168. 

#10
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:178: error: Dead Store
  The value written to &ret (type int) is never used.
  176. 	int divisor = 2;
  177. 	int ret;
  178. 	ret = dividend / (divisor * divisor - 3); /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
        ^
  179. 
  180. }

#11
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:195: error: Dead Store
  The value written to &ret (type int) is never used.
  193. 	int dividend = 1000;
  194. 	int ret;
  195. 	ret = dividend / zero_division_013_func_001(); /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
        ^
  196. }
  197. 

#12
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:206: error: Dead Store
  The value written to &ret (type int) is never used.
  204. 	int dividend = 1000;
  205. 	int ret;
  206. 	ret = dividend / divisor; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
        ^
  207. }
  208. 

#13
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:225: error: Dead Store
  The value written to &ret (type int) is never used.
  223. 	int ret;
  224. 	divisor1 = divisor;
  225. 	ret = dividend / divisor1; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
        ^
  226. }
  227. 

#14
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:236: error: Null Dereference
  pointer `zero_division_016_gbl_divisor` last assigned on line 235 could be null and is dereferenced at line 236, column 2.
  234. {
  235. 	zero_division_016_gbl_divisor = malloc(1*sizeof(int));
  236. 	*zero_division_016_gbl_divisor= 1;
        ^
  237. }
  238. void zero_division_016_func_002 ()

#15
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/zero_division_wo.c:252: error: Dead Store
  The value written to &ret (type int) is never used.
  250. 	divisor1 = *zero_division_016_gbl_divisor;
  251. 	divisor2 = divisor1;
  252. 	ret = dividend / divisor2; /*Tool should not detect this line as error*/ /* No ERROR:division by zero */
        ^
  253. }
  254. 

Found 16 issues
          Issue Type(ISSUED_TYPE_ID): #
              Dead Store(DEAD_STORE): 15
  Null Dereference(NULL_DEREFERENCE): 1
